--- a/Week-13/shortly/package.json
+++ b/Week-13/shortly/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
+    "@sentry/react": "^7.57.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
