--- a/Week18/wealth portfolio app/package.json
+++ b/Week18/wealth portfolio app/package.json
@@ -9,6 +9,7 @@
   "author": "Lohith",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.57.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
