--- a/Week-13/shortly/package.json
+++ b/Week-13/shortly/package.json
@@ -13,7 +13,8 @@
     "@sentry/react": "^7.57.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
